Created Model Field in Orders- total_price

--- a/templates/orders/order_form.html
+++ b/templates/orders/order_form.html
@@ -24,11 +24,12 @@
     </div>
 
     <div class="mb-3">
-      <label for="total-price" class="form-label">Total Price</label>
+      <label for="total_price" class="form-label">Total Price</label>
       <input
         type="text"
+        name='total_price'
         class="form-control"
-        id="total-price"
+        id="total_price"
         value="₹{{ product.price }}"
         disabled
       />
